@@ -1,50 +1,119 @@
-# - Mage generated API documents
-# This module is for API document generation, such as doxygen.
-# Defines following macros:
-#   MANAGE_APIDOC_DOXYGEN(doxygen_in doc_dir)
-#   - This macro generate documents according to doxygen template.
-#     Arguments:
-#     + doxygen_in: Doxygen template file.
-#     + doc_dir: Document source directory to be copied from.
-#     Reads following variable:
-#     + PRJ_DOC_DIR: Directory for document
+# - Manage generated API documents
+# This module provide functions for API document generation.
 #
+# Included Modules:
+# - ManageDependency
+# - ManageMessage
+# 
+# Defines following functions:
+#   MANAGE_APIDOC_DOXYGEN([DOXYGEN <Doxyfile>]
+#     [OUTPUT_DIRECTORY <dir>] ...
+#     )
+#   - Provide Doxygen processing and targets.
+#     DOXYGEN options can also be provided here.
+#     For example:
+#       MANAGE_APIDOC_DOXYGEN(DOXYGEN Doxyfile
+#         OUTPUT_DIRECTORY doc
+#         CREATE_SUBDIR no
+#        )
+#     Will write the configure file to Doxyfile, generate documents will
+#     be put in doc/, and CREATE_SUBDIR is set as "no"
 #
-IF(NOT DEFINED _MANAGE_APIDOC_CMAKE_)
-    SET(_MANAGE_APIDOC_CMAKE_ "DEFINED")
-    INCLUDE(ManageMessage)
+#     * Parameters:
+#       + DOXYGEN Doxyfile: Doxygen file.
+#         Default: ${CMAKE_BINARY_DIR}/Doxygn
+#       + OUTPUT_DIRECTORYCREATE_SUBDIR dir: Directory for generated documents.
+#       + ... : Dox
+#       + docSrcdir: Document source directory to be copied from.
+#     * Targets:
+#       + doxygen: Make doxygen documents.
+#       + doxygen_update_doxyfile: Update Doxyfile.
+#         Doxyfile configuration options such as PROJECT_NUMBER will be
+#         updated according to project information.
+#     * Reads following variable:
+#       + PRJ_DOC_DIR: Directory for installed documents.
+#         Default: /usr/share/doc/${PROJECT_NAME}
+#
+IF(DEFINED _MANAGE_APIDOC_CMAKE_)
+    RETURN()
+ENDIF(DEFINED _MANAGE_APIDOC_CMAKE_)
+SET(_MANAGE_APIDOC_CMAKE_ "DEFINED")
+INCLUDE(ManageMessage)
+INCLUDE(ManageDependency)
 
-    MACRO(MANAGE_APIDOC_DOXYGEN doxygen_in doc_dir)
-	SET(SOURCE_ARCHIVE_IGNORE_FILES ${SOURCE_ARCHIVE_IGNORE_FILES} "/Doxyfile$")
-	SET(_manage_apidoc_doxygen_dependency_missing 0)
-	IF(NOT PRJ_DOC_DIR)
-	    M_MSG(${M_OFF} "PRJ_DOC_DIR undefined. Doxygen support disabled.")
-	    SET(_manage_apidoc_doxygen_dependency_missing 1)
-	ENDIF(NOT PRJ_DOC_DIR)
+FUNCTION(MANAGE_APIDOC_DOXYGEN_ADD_OPTION doxyfile listVar key value)
+    LIST(APPEND ${listVar}
+	"COMMAND" "sed" "-i" "-e"
+	's|^${key}\\s*=.*|${key}="${value}"|' "${doxyfile}"
+	)
+    SET(${listVar} "${${listVar}}" PARENT_SCOPE)
+ENDFUNCTION(MANAGE_APIDOC_DOXYGEN_ADD_OPTION)
 
-	FIND_PACKAGE(doxygen)
-	IF(NOT PACKAGE_FOUND_NAME)
-	    M_MSG(${M_OFF} "Package doxygen not found. Doxygen support disabled.")
-	    SET(_manage_apidoc_doxygen_dependency_missing 1)
-	ENDIF(NOT PACKAGE_FOUND_NAME)
+FUNCTION(MANAGE_APIDOC_DOXYGEN)
+    LIST(APPEND SOURCE_ARCHIVE_IGNORE_FILES "/Doxyfile$")
+    SET(_manage_apidoc_doxygen_dependency_missing 0)
+    MANAGE_DEPENDENCY(BUILD_REQUIRES DOXYGEN PROGRAM_NAMES "doxygen")
+    IF(NOT DEFINED DOXYGEN_FOUND)
+	RETURN()
+    ENDIF(NOT DEFINED DOXYGEN_FOUND)
+    IF("${PRJ_DOC_DIR}" STREQUAL "")
+	SET(PRJ_DOC_DIR "/usr/share/doc/${PROJECT_NAME}"
+	    CACHE PATH "Project document dir"
+	    )
+    ENDIF("${PRJ_DOC_DIR}" STREQUAL "")
+    M_MSG(${M_INFO2} "PRJ_DOC_DIR=${PRJ_DOC_DIR}")
 
-	FIND_PROGRAM(DOXYGEN_CMD doxygen)
-	IF(DOXYGEN_CMD STREQUAL "DOXYGEN_CMD-NOTFOUND")
-	    M_MSG(${M_OFF} "Program doxygen not found. Doxygen support disabled.")
-	    SET(_manage_apidoc_doxygen_dependency_missing 1)
-	ENDIF(DOXYGEN_CMD STREQUAL "DOXYGEN_CMD-NOTFOUND")
+    SET(_stage "key")
+    SET(_key "")
+    SET(_doxygenOptList "")
+    FOREACH(_arg ${ARGN})
+	IF(_stage STREQUAL "key")
+	    SET(_key "${_arg}")
+	    SET(_stage "value")
+	ELSE(_stage STREQUAL "key")
+	    SET(_opt_${_key} "${_arg}")
+	    IF(NOT "${_key}" STREQUAL "DOXYGEN")
+		MANAGE_APIDOC_DOXYGEN_ADD_OPTION("${_opt_DOXYGEN}"
+		    _doxygenOptList "${_key}" "${_arg}"
+		    )
+	    ENDIF(NOT "${_key}" STREQUAL "DOXYGEN")
+	    SET(_stage "key")
+	ENDIF(_stage STREQUAL "key")
+    ENDFOREACH(_arg)
 
-	IF(NOT _manage_apidoc_doxygen_dependency_missing)
-	    CONFIGURE_FILE(${doxygen_in} Doxyfile)
+    IF("${_opt_DOXYGEN}" STREQUAL "")
+	SET(_opt_DOXYGEN "${CMAKE_BINARY_DIR}/Doxyfile")
+    ENDIF("${_opt_DOXYGEN}" STREQUAL "")
 
-	    ADD_CUSTOM_TARGET(doxygen
-		COMMAND "${DOXYGEN_CMD}" "Doxyfile"
-		)
+    IF("${_opt_OUTPUT_DIRECTORY}" STREQUAL "")
+	SET(_opt_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/doc")
+    ENDIF("${_opt_OUTPUT_DIRECTORY}" STREQUAL "")
 
-	    INSTALL(DIRECTORY ${doc_dir}
-		DESTINATION "${PRJ_DOC_DIR}"
-		)
-	ENDIF(NOT _manage_apidoc_doxygen_dependency_missing)
-    ENDMACRO(MANAGE_APIDOC_DOXYGEN doxygen_template)
-ENDIF(NOT DEFINED _MANAGE_APIDOC_CMAKE_)
+    ADD_CUSTOM_TARGET(doxygen
+	COMMAND "${DOXYGEN_EXECUTABLE}" "${opt_DOXYGEN}"
+	DEPENDS ${_opt_DOXYGEN}
+	COMMENT "doxygen: ${opt_DOXYGEN}"
+	)
+
+    MANAGE_APIDOC_DOXYGEN_ADD_OPTION("${_opt_DOXYGEN}"
+	_doxygenOptList "PROJECT_NAME" "${PROJECT_NAME}"
+	)
+    MANAGE_APIDOC_DOXYGEN_ADD_OPTION("${_opt_DOXYGEN}"
+	_doxygenOptList "PROJECT_NUMBER" "${PRJ_VER}"
+	)
+    MANAGE_APIDOC_DOXYGEN_ADD_OPTION("${_opt_DOXYGEN}"
+	_doxygenOptList "PROJECT_BRIEF" "${PRJ_SUMMARY}"
+	)
+
+    ADD_CUSTOM_TARGET_COMMAND(doxygen_update_doxyfile
+	OUTPUT "${_opt_DOXYGEN}"
+	COMMAND "${DOXYGEN_EXECUTABLE}" -g "${_opt_DOXYGEN}"
+	${_doxygenOptList}
+	COMMENT "doxygen_update_doxyfile: ${_opt_DOXYGEN}"
+	)
+
+    INSTALL(DIRECTORY ${_opt_OUTPUT_DIRECTORY}
+	DESTINATION "${PRJ_DOC_DIR}"
+	)
+ENDFUNCTION(MANAGE_APIDOC_DOXYGEN doxygen_template)
 
